@@ -125,7 +125,7 @@ endif
 
 stamps/clone.stamp:
 	if ! test -d openjdk ; then \
-	  if [ $(OPENJDK_SRC_ZIP) ] ; then \
+	  if [ -n $(OPENJDK_SRC_ZIP) ] ; then \
 	    $(UNZIP) -q $(OPENJDK_SRC_ZIP) ; \
 	  else \
 	    hg fclone -r jdk7-$(OPENJDK_VERSION) $(OPENJDK_URL) openjdk; \
@@ -229,7 +229,7 @@ clean-patch:
 # Extract OpenJDK sources for ecj.
 stamps/clone-ecj.stamp: stamps/clone.stamp
 	if ! test -d openjdk-ecj ; then \
-  	  if [ $(OPENJDK_SRC_ZIP) ] ; \
+  	  if [ -n $(OPENJDK_SRC_ZIP) ] ; \
           then \
             $(UNZIP) -q $(OPENJDK_SRC_ZIP) -d tmp-ecj; \
 	    mv tmp-ecj/openjdk openjdk-ecj ; \
